increase MaxPermSize for tests
trying to solve permgen error on Travis CI